k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops-portfolio
  labels:
    app.kubernetes.io/name: devops-portfolio-api
    app.kubernetes.io/part-of: kubernetes-deployment-portfolio
