k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-portfolio-api-service
  namespace: devops-portfolio
spec:
  type: ClusterIP
  selector:
    app: devops-portfolio-api
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
